# adventOfCode

./: .gitignore
haskell/: CHANGELOG.md  README.md  adventOfCode.cabal  help.txt  template.hs  wishlist_changes_for_haskell.txt
haskell/src/2021/Challenge1/: Challenge1.hs  Main.hs
haskell/src/2021/Challenge2/: Challenge2.hs  Main.hs
haskell/src/2021/Challenge3/: Challenge3.hs  Main.hs
haskell/src/2021/Challenge4/: Main.hs
haskell/src/2022/: Challenge1.hs
haskell/src/2022/Challenge1/: Main.hs
haskell/src/2023/Challenge3/: Main.hs
haskell/src/2023/Challenge4/: Main.hs
haskell/src/2023/Challenge5/: Main.hs
haskell/src/2024/Challenge1/: Main.hs
haskell/src/2024/Challenge2/: Main.hs
ocaml/: dune-project  help.txt
ocaml/aoc/: .ocamlformat  aoc.opam  dune-project  run.sh
ocaml/aoc/lib/: dune
ocaml/aoc/src/2023/day1/: dune  puzzle.ml
ocaml/aoc/src/2023/day2/: dune  puzzle.ml
rust/: Cargo.toml  help.txt
rust/src/: file.rs  main.rs
rust/src/2022/: challenge2.rs
rust/src/challenges/: mod.rs  template.rs
rust/src/challenges/year2023/: challenge1.rs  challenge2.rs  challenge3.rs  challenge5.rs  mod.rs
rust/src/challenges/year2024/: challenge1.rs  challenge2.rs  challenge3.rs  challenge4.rs
zig/: help.txt
zig/notes/: following-error.txt
zig/src/: main.zig  util.zig
zig/src/challenges/2023/: main.zig
zig/src/challenges/2023/challenge1/: main.zig
zig/src/challenges/2023/challenge2/: main.zig
