cabal-version:      2.4
name:               adventOfCode
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             EyePathSamurAI
maintainer:         incompleteness1357@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable 2021-challenge1
  hs-source-dirs:      src/2021/Challenge1
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.18
  default-language:    Haskell2010
executable 2021-challenge2
  hs-source-dirs:      src/2021/Challenge2
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.18
  default-language:    Haskell2010
executable 2021-challenge3
  hs-source-dirs:      src/2021/Challenge3
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.18
  default-language:    Haskell2010
executable 2021-challenge4
  hs-source-dirs:      src/2021/Challenge4
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.18,
                       containers
  default-language:    Haskell2010

---------------------------------------------------------------------------

executable 2022-challenge1
  hs-source-dirs:      src/2022/Challenge1
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.18
  default-language:    Haskell2010

executable 2022-challenge2
  hs-source-dirs:      src/2022/Challenge2
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.18
  default-language:    Haskell2010

---------------------------------------------------------------------------

executable 2023-challenge3
  hs-source-dirs:      src/2023/Challenge3
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.18
  default-language:    Haskell2010

executable 2023-challenge4
  hs-source-dirs:      src/2023/Challenge4
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.18
  default-language:    Haskell2010

executable 2023-challenge5
  hs-source-dirs:      src/2023/Challenge5
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.18
  default-language:    Haskell2010

---------------------------------------------------------------------------

executable test
  hs-source-dirs:      src/test
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.18
  default-language:    Haskell2010